code/force-app/main/default/objects/Lead/fields/TMRAC__c.field-meta.xml
<CustomField>
    <fullName>TMRAC__c</fullName>
    <formula>IF(ISPICKVAL(Related_Campaign__r.Campaign_Type__c, &quot;Oversea TMRAC Campaign&quot;), TRUE, FALSE)</formula>
    <label>TMRAC</label>
    <type>Checkbox</type>
</CustomField>