code/force-app/main/default/objects/Lead/fields/Total_Capital_Amt__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Amt__c</fullName>
    <label>資本額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>