code/force-app/main/default/objects/Lead/fields/Total_Export_Value_Lastyear__c.field-meta.xml
<CustomField>
    <fullName>Total_Export_Value_Lastyear__c</fullName>
    <label>出口實績(去年度)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>