code/force-app/main/default/objects/Lead/fields/Total_Import_Value_Lastyear__c.field-meta.xml
<CustomField>
    <fullName>Total_Import_Value_Lastyear__c</fullName>
    <label>進口實績(去年度)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>