code/force-app/main/default/objects/Lead/fields/Trade_Potential__c.field-meta.xml
<CustomField>
    <fullName>Trade_Potential__c</fullName>
    <label>貿融潛力</label>
    <length>10</length>
    <type>Text</type>
</CustomField>