code/force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>無效原因</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D1</fullName>
                <label>先前具客訴紀錄</label>
            </value>
            <value>
                <fullName>D2</fullName>
                <label>無法聯繫上客戶</label>
            </value>
            <value>
                <fullName>D3</fullName>
                <label>曾有案件未過審記錄</label>
            </value>
            <value>
                <fullName>D4</fullName>
                <label>年營收規模小於5,000萬</label>
            </value>
            <value>
                <fullName>D5</fullName>
                <label>財報或營收結構不佳</label>
            </value>
            <value>
                <fullName>D6</fullName>
                <label>其他 (請填寫無效原因備註)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>