code/force-app/main/default/objects/Lead/fields/Unqualified_Reason_No__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason_No__c</fullName>
    <formula>TEXT(Unqualified_Reason__c)</formula>
    <label>無效原因編號</label>
    <type>Text</type>
</CustomField>