code/force-app/main/default/objects/Lead/fields/Unqualified_Reason_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason_Remarks__c</fullName>
    <label>無效原因說明</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>