code/force-app/main/default/objects/Lead/fields/X1st_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Call_Date__c</fullName>
    <label>初次電訪日期</label>
    <type>Date</type>
</CustomField>