code/force-app/main/default/objects/Lead/fields/X1st_Called__c.field-meta.xml
<CustomField>
    <fullName>X1st_Called__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已初次電訪</label>
    <type>Checkbox</type>
</CustomField>