code/force-app/main/default/objects/Lead/recordTypes/CUB_Domestic_Campaign.recordType-meta.xml
<RecordType>
    <fullName>CUB_Domestic_Campaign</fullName>
    <active>true</active>
    <businessProcess>CUB_Domestic_Campaign</businessProcess>
    <label>國內_行銷名單</label>
</RecordType>