code/force-app/main/default/objects/Lead/recordTypes/CUB_Domestic_Self_Development.recordType-meta.xml
<RecordType>
    <fullName>CUB_Domestic_Self_Development</fullName>
    <active>true</active>
    <businessProcess>CUB_Domestic_Self_Development</businessProcess>
    <label>國內_自行開發</label>
</RecordType>