code/force-app/main/default/objects/Lead/recordTypes/CUB_Oversea_Campaign.recordType-meta.xml
<RecordType>
    <fullName>CUB_Oversea_Campaign</fullName>
    <active>true</active>
    <businessProcess>CUB_Oversea_Campaign</businessProcess>
    <label>Oversea Campaign</label>
</RecordType>