code/force-app/main/default/objects/Lead/recordTypes/CUB_Oversea_Self_Development.recordType-meta.xml
<RecordType>
    <fullName>CUB_Oversea_Self_Development</fullName>
    <active>true</active>
    <businessProcess>CUB_Oversea_Self_Development</businessProcess>
    <label>Oversea Self Development</label>
</RecordType>