code/force-app/main/default/objects/Lead/recordTypes/CUB_Referral_Domestic_Branch.recordType-meta.xml
<RecordType>
    <fullName>CUB_Referral_Domestic_Branch</fullName>
    <active>true</active>
    <businessProcess>CUB_Referral_Domestic_Branch</businessProcess>
    <label>轉介_國內分行轉介</label>
</RecordType>