code/force-app/main/default/objects/Lead/recordTypes/CUB_Referral_Domestic_Company.recordType-meta.xml
<RecordType>
    <fullName>CUB_Referral_Domestic_Company</fullName>
    <active>true</active>
    <businessProcess>CUB_Referral_Domestic_Company</businessProcess>
    <label>轉介_國內法人法金轉介</label>
</RecordType>