code/force-app/main/default/objects/Lead/recordTypes/CUB_Referral_Domestic_Individual.recordType-meta.xml
<RecordType>
    <fullName>CUB_Referral_Domestic_Individual</fullName>
    <active>true</active>
    <businessProcess>CUB_Referral_Domestic_Individual</businessProcess>
    <label>轉介_國內自然人法金轉介</label>
</RecordType>