code/force-app/main/default/objects/Lead/recordTypes/CUB_Transnational_Referral.recordType-meta.xml
<RecordType>
    <fullName>CUB_Transnational_Referral</fullName>
    <active>true</active>
    <businessProcess>CUB_Transnational_Referral</businessProcess>
    <label>轉介_跨國法金轉介</label>
</RecordType>