code/force-app/main/default/objects/Lead/recordTypes/FinServ__BusinessReferral.recordType-meta.xml
<RecordType>
    <fullName>FinServ__BusinessReferral</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <description>A business or organization that is a commercial banking business referral​</description>
    <label>Business Referral</label>
</RecordType>