code/force-app/main/default/objects/Lead/recordTypes/FinServ__Referral.recordType-meta.xml
<RecordType>
    <fullName>FinServ__Referral</fullName>
    <active>true</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <description>A person, business, or organization that is a referral</description>
    <label>Person Referral</label>
</RecordType>