code/force-app/main/default/objects/Lead/recordTypes/FinServ__RetirementPlanning.recordType-meta.xml
<RecordType>
    <fullName>FinServ__RetirementPlanning</fullName>
    <active>false</active>
    <businessProcess>FinServ__Lead Process</businessProcess>
    <label>Retirement Planning</label>
</RecordType>