code/force-app/main/default/objects/Lead/validationRules/CUB_InvalidReasonIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CUB_InvalidReasonIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &apos;D0&apos;), 
  ISPICKVAL(Unqualified_Reason__c, &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>若「開發狀態」選擇「無效」，請先填寫「無效原因」</errorMessage>
</ValidationRule>