code/force-app/main/default/objects/Lead/validationRules/CUB_InvalidReasonNoteIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CUB_InvalidReasonNoteIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Unqualified_Reason__c, &quot;D6&quot;), 
  Unqualified_Reason_Remarks__c = NULL  
)</errorConditionFormula>
    <errorMessage>若「無效原因」選擇「其他」，請先填寫「無效原因說明」</errorMessage>
</ValidationRule>