code/force-app/main/default/objects/Lead/listViews/ICC604_Lead.listView-meta.xml
<ListView>
    <fullName>ICC604_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch-ICC Team</label>
    <queue>VN_ICC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>