code/force-app/main/default/objects/Lead/listViews/VN604_Lead.listView-meta.xml
<ListView>
    <fullName>VN604_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch-VN Team</label>
    <queue>VN_VN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>