code/force-app/main/default/objects/Lead/listViews/VN_Lead.listView-meta.xml
<ListView>
    <fullName>VN_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch</label>
    <queue>VN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>