code/force-app/main/default/objects/Lead/listViews/VN_VN_Lead.listView-meta.xml
<ListView>
    <fullName>VN_VN_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch-VN Team</label>
    <queue>VN_VN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>