code/force-app/main/default/objects/Lead/listViews/X604_Lead.listView-meta.xml
<ListView>
    <fullName>X604_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>VN Branch</label>
    <queue>VN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>