code/force-app/main/default/objects/Lead/listViews/X721_Lead.listView-meta.xml
<ListView>
    <fullName>X721_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>北二區</label>
    <queue>X721</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>