code/force-app/main/default/objects/Lead/listViews/X722_Lead.listView-meta.xml
<ListView>
    <fullName>X722_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>產二區</label>
    <queue>X722</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>