code/force-app/main/default/objects/Lead/listViews/X725_Lead.listView-meta.xml
<ListView>
    <fullName>X725_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>產三區</label>
    <queue>X725</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>