code/force-app/main/default/objects/Lead/listViews/X726_Lead.listView-meta.xml
<ListView>
    <fullName>X726_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>北三區</label>
    <queue>X726</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>