code/force-app/main/default/objects/Lead/listViews/X728_Lead.listView-meta.xml
<ListView>
    <fullName>X728_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>產一區</label>
    <queue>X728</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>