code/force-app/main/default/objects/Lead/listViews/X729_Lead.listView-meta.xml
<ListView>
    <fullName>X729_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>桃竹區</label>
    <queue>X729</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>