code/force-app/main/default/objects/Lead/listViews/X731_Lead.listView-meta.xml
<ListView>
    <fullName>X731_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>中一區</label>
    <queue>X731</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>