code/force-app/main/default/objects/Lead/listViews/X733_Lead.listView-meta.xml
<ListView>
    <fullName>X733_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>南區台南</label>
    <queue>X733</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>